--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -76,9 +76,6 @@
     <ClCompile Include="Trigger_Win.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
-    <ClCompile Include="Subtitle.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="PlayerManager.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
@@ -409,6 +406,9 @@
     </ClCompile>
     <ClCompile Include="FootTrigger.cpp" />
     <ClCompile Include="SoundMaterial.cpp" />
+    <ClCompile Include="Subtitle.cpp">
+      <Filter>Scripts\Transitions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -491,9 +491,6 @@
     </ClInclude>
     <ClInclude Include="Trigger_Win.h">
       <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="Subtitle.h">
-      <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="PlayerManager.h">
       <Filter>Scripts\Player</Filter>
@@ -828,6 +825,9 @@
     </ClInclude>
     <ClInclude Include="FootTrigger.h" />
     <ClInclude Include="SoundMaterial.h" />
+    <ClInclude Include="Subtitle.h">
+      <Filter>Scripts\Transitions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -910,6 +910,9 @@
     </Filter>
     <Filter Include="Scripts\DWARVES JAJA XD">
       <UniqueIdentifier>{1e50a00a-0534-4353-a98d-91340326485c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Transitions">
+      <UniqueIdentifier>{47c54b73-2e6d-4659-bf87-0b1a8e728906}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
