adding ending scene

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -269,6 +269,7 @@
     <ClInclude Include="RootLeshen.h" />
     <ClInclude Include="RockSpawner.h" />
     <ClInclude Include="SadTutorial.h" />
+    <ClInclude Include="ScaleImage.h" />
     <ClInclude Include="Scale_Win.h" />
     <ClInclude Include="Scores_Data.h" />
     <ClInclude Include="EffectArea.h" />
@@ -404,6 +405,7 @@
     <ClCompile Include="RootLeshen.cpp" />
     <ClCompile Include="RockSpawner.cpp" />
     <ClCompile Include="SadTutorial.cpp" />
+    <ClCompile Include="ScaleImage.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
     <ClCompile Include="EffectArea.cpp" />
     <ClCompile Include="Scores_Data.cpp" />
