--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -409,6 +409,9 @@
     <ClCompile Include="Subtitle.cpp">
       <Filter>Scripts\Transitions</Filter>
     </ClCompile>
+    <ClCompile Include="ScaleImage.cpp">
+      <Filter>Scripts\Transitions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -826,6 +829,9 @@
     <ClInclude Include="FootTrigger.h" />
     <ClInclude Include="SoundMaterial.h" />
     <ClInclude Include="Subtitle.h">
+      <Filter>Scripts\Transitions</Filter>
+    </ClInclude>
+    <ClInclude Include="ScaleImage.h">
       <Filter>Scripts\Transitions</Filter>
     </ClInclude>
   </ItemGroup>
